--- a/images/index.html
+++ b/images/index.html
@@ -45,6 +45,7 @@
             <button class="button">Open an account in 10 minutes</button><br>
             <img src="/images/asset 23.svg" alt="hero">
             <img src="/images/asset 24.svg" alt="hero">
+            <img src="/images/asset 25.svg" alt="hero">
 
         </div>
         <div class="image">
