--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Matter+SQ&display=swap">
     <title>Home-Brass Business Bank</title>
     <link rel="stylesheet" href="/css/style.css">
+    <!-- Corrected favicon link -->
+    <link rel="icon" href="/images/asset 19.svg" type="image/x-icon">
 </head>
+
 
 <body>
 
@@ -45,7 +48,7 @@
             <button class="button">Open an account in 10 minutes</button><br>
             <img src="/images/asset 23.svg" alt="hero">
             <img src="/images/asset 24.svg" alt="hero">
-
+            <img src="/images/asset 25.svg" alt="hero">
         </div>
         <div class="image">
             <img src="/images/hero.png" alt="hero">
